# arcticfox-c3

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
arcticfox-agent/: Cargo.toml
arcticfox-agent/src/: agent.rs  anti_analysis.rs  anti_forensics.rs  combined_mcp.rs  evasion.rs  executor.rs  fetcher.rs  heartbeat.rs  icmp_heartbeat.rs  lib.rs  log_covert.rs  main.rs  payload.rs  persistence.rs  rustsploit_bridge.rs  stealth.rs  systemd_gen.rs  uncovered.rs  zw_heartbeat.rs
arcticfox-api/: Cargo.toml
arcticfox-api/src/: lib.rs  main.rs  routes_admin.rs  routes_lints.rs
arcticfox-bindshell/: Cargo.toml
arcticfox-bindshell/src/: icmp_bind.rs  lib.rs  main.rs  tcp_bind.rs  udp_bind.rs
arcticfox-control/: Cargo.toml
arcticfox-control/src/: main.rs
arcticfox-core/: Cargo.toml
arcticfox-core/src/: config.rs  crypto.rs  error.rs  fbi.rs  lib.rs  repo.rs  zwcodec.rs
arcticfox-dashboard/: Cargo.toml
arcticfox-dashboard/src/: api.rs  app.rs  main.rs  setup.rs  ui.rs
arcticfox-dashboard/src/tabs/: attack.rs  bots.rs  commands.rs  config.rs  implants.rs  mod.rs  repos.rs  scanner.rs  stats.rs
arcticfox-lol/: Cargo.toml
arcticfox-lol/src/: lib.rs
arcticfox-mcp/: Cargo.toml
arcticfox-mcp/src/: main.rs
arcticfox-scan/: Cargo.toml
arcticfox-scan/src/: main.rs  syn.rs
arcticfox-uring/: Cargo.toml
arcticfox-uring/src/: lib.rs
arcticfox-zwtransport/: Cargo.toml
arcticfox-zwtransport/src/: lib.rs
docs/: API-Reference.md  Architecture.md  Commands.md  Configuration.md  Dashboard.md  Detection-Bypasses.md  FBI-NET-Compat.md  GITHUB-SETUP.md  Getting-Started.md  Home.md  MEDIUM-ARTICLE.md  MITRE-Mapping.md  Novel-Techniques.md  RUSTSPLOIT-CHECKLIST.md  Rustsploit-Interop.md  SOCIAL-RELEASE.txt  Stealth-Guide.md
