[workspace]
members = [
    "arcticfox-core",
    "arcticfox-agent",
    "arcticfox-api",
    "arcticfox-control",
    "arcticfox-scan",
    "arcticfox-lol",
    "arcticfox-mcp",
    "arcticfox-zwtransport",
    "arcticfox-bindshell",
    "arcticfox-uring",
]
resolver = "2"

[workspace.package]
version = "4.0.0"
edition = "2024"
license = "GPL-3.0-only"
authors = ["S.B"]
repository = "https://github.com/s-b-repo/arcticfox-c3"
description = "ArcticFox C3 — Async Zero-Width Dead-Drop C2 Framework in Rust"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ring = "0.17"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
base64 = "0.22"
rand = "0.8"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
socket2 = "0.5"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
futures = "0.3"
async-trait = "0.1"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
hex = "0.4"
data-encoding = "2"
