[package]
name = "arcticfox-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ArcticFox C3 Agent: async dead-drop C2 agent with self-healing"

[[bin]]
name = "arcticfox-agent"
path = "src/main.rs"

[dependencies]
arcticfox-core = { path = "../arcticfox-core" }
arcticfox-zwtransport = { path = "../arcticfox-zwtransport" }
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
chrono.workspace = true
base64.workspace = true
hex.workspace = true
uuid.workspace = true
tempfile.workspace = true
libc = "0.2"
