[package]
name = "arcticfox-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ArcticFox C3 API: REST server for admin & lints dashboards"

[[bin]]
name = "arcticfox-api"
path = "src/main.rs"

[dependencies]
arcticfox-core = { path = "../arcticfox-core" }
tokio.workspace = true
axum.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
chrono.workspace = true
uuid.workspace = true
