[package]
name = "arcticfox-control"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ArcticFox C3 Control: operator CLI for managing dead-drop repos"

[[bin]]
name = "arcticfox-control"
path = "src/main.rs"

[dependencies]
arcticfox-core = { path = "../arcticfox-core" }
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
rand.workspace = true
