[package]
name = "arcticfox-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ArcticFox C3 core: zero-width codec, config, crypto, error types"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
ring.workspace = true
rand.workspace = true
thiserror.workspace = true
base64.workspace = true
hex.workspace = true
data-encoding.workspace = true
chrono.workspace = true
url.workspace = true
tracing.workspace = true
reqwest.workspace = true
lazy_static = "1"
