[package]
name = "arcticfox-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "C3 Unified Console Dashboard"

[[bin]]
name = "c3"
path = "src/main.rs"

[dependencies]
arcticfox-core = { path = "../arcticfox-core" }
arcticfox-lol = { path = "../arcticfox-lol" }
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
chrono.workspace = true
hex.workspace = true
rand.workspace = true
ratatui = "0.29"
crossterm = "0.28"
url = "2"
