[package]
name = "arcticfox-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Model Context Protocol JSON-RPC server"

[[bin]]
name = "arcticfox-mcp"
path = "src/main.rs"

[dependencies]
arcticfox-core = { path = "../arcticfox-core" }
arcticfox-agent = { path = "../arcticfox-agent" }
arcticfox-lol = { path = "../arcticfox-lol" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
reqwest.workspace = true
async-trait.workspace = true
thiserror.workspace = true
uuid.workspace = true
