[package]
name = "arcticfox-scan"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Async network service scanner"

[[bin]]
name = "arcticfox-scan"
path = "src/main.rs"

[dependencies]
arcticfox-core = { path = "../arcticfox-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
rand.workspace = true
ipnet = "2"
