[package]
name = "arcticfox-uring"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ArcticFox io_uring transport: Linux kernel-bypass async I/O for extreme implant performance"

[dependencies]
arcticfox-core = { path = "../arcticfox-core" }
arcticfox-zwtransport = { path = "../arcticfox-zwtransport" }
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
libc = "0.2"
