[package]
name = "arcticfox-uring"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Linux kernel-bypass async I/O transport"

[dependencies]
arcticfox-core = { path = "../arcticfox-core" }
arcticfox-zwtransport = { path = "../arcticfox-zwtransport" }
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
libc = "0.2"
