[package]
name = "arcticfox-zwtransport"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ArcticFox ZW Transport: encrypt→ZW-encode framing layer for all protocols"

[dependencies]
arcticfox-core = { path = "../arcticfox-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
ring.workspace = true
thiserror.workspace = true
tracing.workspace = true
