[package]
name = "arcticfox-zwtransport"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Encrypted framing transport layer"

[dependencies]
arcticfox-core = { path = "../arcticfox-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
ring.workspace = true
rand.workspace = true
thiserror.workspace = true
tracing.workspace = true
